fix: mail address & project

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Projects</a></li>
                     <li class="active"><a href="about.html">About</a></li>
-                    <li><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></li>
+                    <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
                </ul>
           </div>
 
@@ -134,7 +134,7 @@
                </div>
 
                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
-                    <p><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></p>
+                    <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
                     <p>© 2019 Weichi Wu | All Rights Reserved.</p>
                </div>
 
