--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
                     <li><a href="index.html">Projects</a></li>
                     <li><a href="about.html">About</a></li>
                     <li class="active"><a href="blog.html">Blog</a></li>
-                    <li><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></li>
+                    <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
                </ul>
           </div>
 
@@ -126,7 +126,7 @@
                </div>
 
                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
-                    <p><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></p>
+                    <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
                     <p>© 2019 Weichi Wu | All Rights Reserved.</p>
                </div>
 
