--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
                </div>
 
                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
-                    <p><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></p>
+                    <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
                     <p>© 2019 Weichi Wu | All Rights Reserved.</p>
                </div>
 
