--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
+<!-- Favicons -->
+<link rel="shortcut icon" href="images/favicon.png">
+
 </head>
 <body>
 
@@ -48,7 +51,7 @@
                <ul class="nav navbar-nav navbar-right">
                     <li class="active"><a href="index.html">Projects</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></li>
+                    <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
                </ul>
           </div>
 
@@ -62,7 +65,7 @@
           <div class="row">
 
                <div class="col-md-12 col-sm-12">
-                    <h2>Hello, I'm Weichi Wu. <br>UI/UX Designer, Product Designer and Frontend Engineer.</h2>
+                    <h2>Hello, I'm Weichi Wu. <br>Product Designer, UI/UX Designer and Frontend Engineer.</h2>
                     <hr>
                </div>
 
@@ -77,13 +80,13 @@
           <div class="row">
 
                <div class="col-md-4 col-sm-6">
-                    <a href="single-project.html">
+                    <a href="project/single-project.html">
                          <div class="portfolio-thumb">
-                              <img src="images/portfolio-img1.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="images/p_l_s_e_.png" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Brand Identity</small>
+                                             <h3>Nail Printer App</h3>
+                                             <small>Product Design</small>
                                         </div>
                                    </div>
                          </div>
@@ -91,7 +94,7 @@
                </div>
 
                <div class="col-md-4 col-sm-6">
-                    <a href="single-project.html">
+                    <a href="project/single-project.html">
                          <div class="portfolio-thumb">
                               <img src="images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
@@ -105,7 +108,7 @@
                </div>
 
                <div class="col-md-4 col-sm-6">
-                    <a href="single-project.html">
+                    <a href="project/single-project.html">
                          <div class="portfolio-thumb">
                               <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
@@ -119,7 +122,7 @@
                </div>
 
                <div class="col-md-4 col-sm-6">
-                    <a href="single-project.html">
+                    <a href="project/single-project.html">
                          <div class="portfolio-thumb">
                               <img src="images/portfolio-img4.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
@@ -133,7 +136,7 @@
                </div>
 
                <div class="col-md-4 col-sm-6">
-                    <a href="single-project.html">
+                    <a href="project/single-project.html">
                          <div class="portfolio-thumb">
                               <img src="images/portfolio-img5.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
@@ -147,7 +150,7 @@
                </div>
 
                <div class="col-md-4 col-sm-6">
-                    <a href="single-project.html">
+                    <a href="project/single-project.html">
                          <div class="portfolio-thumb">
                               <img src="images/portfolio-img6.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
@@ -162,7 +165,7 @@
 
                <div class="col-md-12 col-sm-12 text-center">
                     <h3>Any opportunities and challenges are welcome. </h3>
-                    <h3><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></h3>
+                    <h3><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></h3>
                </div>
 
           </div>
@@ -191,7 +194,7 @@
                </div>
 
                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
-                    <p><a href="mailto:hello@wcwu.cc">hello@wcwu.cc</a></p>
+                    <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
                     <p>© 2019 Weichi Wu | All Rights Reserved.</p>
                </div>
 
