--- a/project/single-project.html
+++ b/project/single-project.html
@@ -11,11 +11,11 @@
 
 <title>Magnet - Minimal Portfolio Template</title>
 
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
+<link rel="stylesheet" href="../css/bootstrap.min.css">
+<link rel="stylesheet" href="../css/font-awesome.min.css">
 
 <!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="../css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
 </head>
@@ -40,12 +40,12 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                </button>
-               <a href="index.html" class="navbar-brand"><img src="images/wlogo.png"></a>
+               <a href="../index.html" class="navbar-brand"><img src="../images/wlogo.png"></a>
           </div>
           <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Projects</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li class="active"><a href="../index.html">Projects</a></li>
+                    <li><a href="../about.html">About</a></li>
                     <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
                </ul>
           </div>
@@ -63,18 +63,17 @@
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <h1>Project title here</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <a href="#"><i class="fa fa-long-arrow-right"></i> View Website</a>
 
                     <div class="col-md-12 col-sm-12">
-                         <img src="images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
+                         <img src="../images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
                     </div>
 
                     <div class="col-md-6 col-sm-6">
-                         <img src="images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
+                         <img src="../images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
                     </div>
 
                     <div class="col-md-6 col-sm-6">
-                         <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                         <img src="../images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
                     </div>
 
                     <div class="clearfix"></div>
@@ -98,6 +97,18 @@
                          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                          <strong>James Otto ( Project Manager )..</strong>
                     </div>
+
+
+                    <div class="col-md-4 col-sm-4 text-left">
+                         <a href="#" style="padding-left: 0"><i class="fa fa-long-arrow-left"></i> View Previous Project </a>
+                    </div>
+
+                    <div class="col-md-4 col-sm-4"></div>
+
+                    <div class="col-md-4 col-sm-4 text-right">
+                         <a href="#"> View Next Project <i class="fa fa-long-arrow-right"></i></a>
+                    </div>
+
                </div>
 
           </div>
@@ -111,7 +122,7 @@
           <div class="row">
 
                <div class="col-md-3 col-sm-3">
-                    <img src="images/wlogo.png">
+                    <img src="../images/wlogo.png">
                </div>
 
                <div class="col-md-4 col-sm-4">
@@ -134,9 +145,9 @@
 
 <!-- SCRIPTS -->
 
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/custom.js"></script>
+<script src="../js/jquery.js"></script>
+<script src="../js/bootstrap.min.js"></script>
+<script src="../js/custom.js"></script>
 
 </body>
 </html>
