feat: favicon + fix pages

--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
 <link rel="stylesheet" href="css/style.css">
 <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
+<!-- Favicons -->
+<link rel="shortcut icon" href="images/favicon.png">
+
 </head>
 <body>
 
