feat: qrpa + project

--- a/project/nail.html
+++ b/project/nail.html
@@ -7,6 +7,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
      <title>Weichi Wu - Portfolio</title>
 
      <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -63,10 +64,9 @@
                <div class="row">
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
-                         <h1>Project title here</h1>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                              laboris nisi ut aliquip ex ea commodo consequat.</p>
+                         <h1>Polishee</h1>
+                         <p>I am the sole designer on a 5-person team. We cooperate with a hardware company to build an
+                              app for people to paint any images on their nails.</p>
 
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
@@ -82,19 +82,22 @@
 
                          <div class="clearfix"></div>
 
-                         <div class="col-md- col-sm-">
+                         <div class="col-md-6 col-sm-6">
                               <h3>Role</h3>
-                              <p>Brand Identity</p>
+                              <p>User research</p>
+                              <p>Brand design</p>
+                              <p>Interface design</p>
+                              <p>App development</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Length</h3>
-                              <p>2 months</p>
+                              <p>8 months</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Year</h3>
-                              <p>2018</p>
+                              <p>2018-19</p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
