--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -7,6 +7,7 @@
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
      <title>Weichi Wu - Portfolio</title>
 
      <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -63,33 +64,34 @@
                <div class="row">
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
-                         <h1>Project title here</h1>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                              laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+                         <h1>QAReplay</h1>
+                         <p>This product records your screen but only saves the latest 15 secs. It helps you catch the
+                              unexpected behaviors when you're testing your product.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/qrpa_banner.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_1.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_2.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="clearfix"></div>
 
-                         <div class="col-md- col-sm-">
+                         <div class="col-md-6 col-sm-6">
                               <h3>Role</h3>
-                              <p>Brand Identity</p>
+                              <p>Brand Design</p>
+                              <p>Web Design / Develop</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Length</h3>
-                              <p>2 months</p>
+                              <p>1 month</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
@@ -98,10 +100,21 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                   exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                              <strong>James Otto ( Project Manager )..</strong>
+                              <strong>What is QAReplay</strong>
+
+                              <p>QAReplay is specially designed and engineered for quality assurance team. It’s aiming
+                                   to greatly improve QA efficiency. Help QA team record/ document product issue without
+                                   a hassle.</p>
+                              <p>I designed the brand identity, product logo and developed the product landing page.</p>
+
+                         </div>
+
+                         <div class="col-md-6 col-sm-6">
+                              <img src="../images/q_r_p_a_dm.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-6 col-sm-6">
+                              <img src="../images/q_r_p_a_lg.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
