--- a/about.html
+++ b/about.html
@@ -1,160 +1,168 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=Edge">
-<meta name="description" content="">
-<meta name="keywords" content="">
-<meta name="author" content="">
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="description" content="">
+    <meta name="keywords" content="">
+    <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Magnet - Minimal Portfolio Template</title>
+    <title>Weichi Wu - Portfolio</title>
 
-<link rel="stylesheet" href="css/bootstrap.min.css">
-<link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
-<!-- Main css -->
-<link rel="stylesheet" href="css/style.css">
-<link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
+    <!-- Main css -->
+    <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,700" rel="stylesheet">
 
-<!-- Favicons -->
-<link rel="shortcut icon" href="images/favicon.png">
+    <!-- Favicons -->
+    <link rel="shortcut icon" href="images/favicon.png">
 
 </head>
+
 <body>
 
-<!-- PRE LOADER -->
+    <!-- PRE LOADER -->
 
-<div class="preloader">
-     <div class="sk-spinner sk-spinner-wordpress">
-          <span class="sk-inner-circle"></span>
-     </div>
-</div>
+    <div class="preloader">
+        <div class="sk-spinner sk-spinner-wordpress">
+            <span class="sk-inner-circle"></span>
+        </div>
+    </div>
 
-<!-- Navigation section  -->
+    <!-- Navigation section  -->
 
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-     <div class="container">
+    <div class="navbar navbar-default navbar-static-top" role="navigation">
+        <div class="container">
 
-          <div class="navbar-header">
-               <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <div class="navbar-header">
+                <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
-               </button>
-               <a href="index.html" class="navbar-brand"><img src="images/wlogo.png"></a>
-          </div>
-          <div class="collapse navbar-collapse">
-               <ul class="nav navbar-nav navbar-right">
+                </button>
+                <a href="index.html" class="navbar-brand"><img src="images/wlogo.png"></a>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="index.html">Projects</a></li>
                     <li class="active"><a href="about.html">About</a></li>
                     <li><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></li>
-               </ul>
-          </div>
+                </ul>
+            </div>
 
-  </div>
-</div>
+        </div>
+    </div>
 
 
-<!-- About Section -->
+    <!-- About Section -->
 
-<section id="about">
-     <div class="container">
-          <div class="row">
+    <section id="about">
+        <div class="container">
+            <div class="row">
 
-               <div class="col-md-offset-1 col-md-10 col-sm-12">
+                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="section-title">
-                         <h3>about our story</h3>
-                         <h2>The creative web & mobile studio and focused on brand identity, web development and social marketing.</h2>
+                        <h3>about</h3>
+                        <h2>The creative web & mobile studio and focused on brand identity, web development and
+                            social marketing.</h2>
                     </div>
 
                     <div class="col-md-8 col-sm-12">
-                         <img src="images/about-image.jpg" class="img-responsive" alt="About">
+                        <img src="images/about-image.jpg" class="img-responsive" alt="About">
                     </div>
 
                     <div class="col-md-4 col-sm-12">
-                         <h1>Magnet Studio</h1>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+                        <h1>Studio</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore.</p>
+                        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
                     </div>
 
                     <div class="clearfix"></div>
 
-                     <hr>
+                    <hr>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore.</p>
 
                     <hr>
 
                     <div class="col-md-4 col-sm-6">
-                         <h3>Web Development</h3>
-                         <ul>
-                              <li>Online Shopping Site</li>
-                              <li>Wordpress CMS</li>
-                              <li>Bootstrap themes</li>
-                              <li>Web Application</li>
-                         </ul>
+                        <h3>Web Development</h3>
+                        <ul>
+                            <li>Online Shopping Site</li>
+                            <li>Wordpress CMS</li>
+                            <li>Bootstrap themes</li>
+                            <li>Web Application</li>
+                        </ul>
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                         <h3>Brand Identity</h3>
-                         <ul>
-                              <li>Logo Design</li>
-                              <li>Personal Branding</li>
-                              <li>Flyer Design</li>
-                              <li>Creative Direction</li>
-                         </ul>
+                        <h3>Brand Identity</h3>
+                        <ul>
+                            <li>Logo Design</li>
+                            <li>Personal Branding</li>
+                            <li>Flyer Design</li>
+                            <li>Creative Direction</li>
+                        </ul>
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                         <h3>Social marketing</h3>
-                         <ul>
-                              <li>facebook, twitter.</li>
-                              <li>Page Maintenance</li>
-                              <li>Social media</li>
-                         </ul>
+                        <h3>Social marketing</h3>
+                        <ul>
+                            <li>facebook, twitter.</li>
+                            <li>Page Maintenance</li>
+                            <li>Social media</li>
+                        </ul>
                     </div>
-               </div>
+                </div>
 
-          </div>
-     </div>
-</section>
+            </div>
+        </div>
+    </section>
 
-<!-- Footer Section -->
+    <!-- Footer Section -->
 
-<footer>
-     <div class="container">
-          <div class="row">
+    <footer>
+        <div class="container">
+            <div class="row">
 
-               <div class="col-md-3 col-sm-3">
+                <div class="col-md-3 col-sm-3">
                     <img src="images/wlogo.png">
-               </div>
+                </div>
 
-               <div class="col-md-4 col-sm-4">
+                <div class="col-md-4 col-sm-4">
                     <p></p>
-               </div>
+                </div>
 
-               <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
+                <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
                     <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
                     <p>© 2019 Weichi Wu | All Rights Reserved.</p>
-               </div>
+                </div>
 
-               <div class="clearfix col-md-12 col-sm-12">
+                <div class="clearfix col-md-12 col-sm-12">
                     <hr>
-               </div>
-               
-          </div>
-     </div>
-</footer>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 
 
-<!-- SCRIPTS -->
+    <!-- SCRIPTS -->
 
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/custom.js"></script>
+    <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/custom.js"></script>
 
 </body>
+
 </html>
