--- a/project/nail.html
+++ b/project/nail.html
@@ -69,25 +69,17 @@
                               app for people to paint any images on their nails.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
-                         </div>
-
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
-                         </div>
-
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/p_l_s_e_dm.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="clearfix"></div>
 
                          <div class="col-md-6 col-sm-6">
                               <h3>Role</h3>
-                              <p>User research</p>
-                              <p>Brand design</p>
-                              <p>Interface design</p>
-                              <p>App development</p>
+                              <p>User Research</p>
+                              <p>Brand Design</p>
+                              <p>Interface Design</p>
+                              <p>App Development</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
@@ -101,10 +93,65 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                   exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                              <strong>James Otto ( Project Manager )..</strong>
+                              <strong>About This Product</strong>
+                              <p>This app allows users to choose images from our library or upload from album and
+                                   preview on a mock hand to see the result of nail arts.</p>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <strong>User and Audience</strong>
+                              <p>The target users are young girls interesting in nail arts and passionating about DIY at
+                                   home. These users like innovation products and devices about fashion and beauty that
+                                   could make them have some topics with their homie.</p>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <img src="../images/p_l_s_e_vpc.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <strong>From 0 to 1</strong>
+                              <p>We delivered a questionnaire to know the market of this product field and made a
+                                   persona to make sure that every member of our team had the same mental picture of our
+                                   target audience.</p>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <img src="../images/p_l_s_e_psn.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <strong>Wireframes and Mockups</strong>
+                              <p>For smoothly experience, I designed a component called Palette to store and show images
+                                   that user chose.</p>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <img src="../images/p_l_s_e_wrfae.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <img src="../images/p_l_s_e_mk.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <strong>Logo Design</strong>
+                              <p>I designed a logo font for Polishee - about creative, fashion, revolution beauty. That
+                                   was my first time to design about typograhpy and fonts.</p>
+                         </div>
+
+                         <div class="col-md-6 col-sm-6">
+                              <img src="../images/p_l_s_e_lg2.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-6 col-sm-6">
+                              <img src="../images/p_l_s_e_lg.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <strong>Outcomes</strong>
+                              <p>The app was well received within our team and client. While it has not yet been
+                                   released, it has already worked with the test nail printer. </p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
