--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -100,7 +100,7 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>What is QAReplay</strong>
+                              <strong>About This Product</strong>
 
                               <p>QAReplay is specially designed and engineered for quality assurance team. It’s aiming
                                    to greatly improve QA efficiency. Help QA team record/ document product issue without
