fix: image size

--- a/project/nail.html
+++ b/project/nail.html
@@ -122,8 +122,6 @@
 
                          <div class="col-md-12 col-sm-12 text-center">
                               <strong>Wireframes and Mockups</strong>
-                              <p>For smoothly experience, I designed a component called Palette to store and show images
-                                   that user chose.</p>
                          </div>
 
                          <div class="col-md-12 col-sm-12">
@@ -132,6 +130,11 @@
 
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/p_l_s_e_mk.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <p>For smoothly experience, I designed a component called Palette to store and show images
+                                   that user chose.</p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
