feat: nail done

--- a/project/nail.html
+++ b/project/nail.html
@@ -99,6 +99,47 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
+                              <strong>Key Features</strong>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <div class="col-md-4 col-sm-12">
+                                   <img src="../images/p_l_s_e_kf_1.png" class="img-responsive box-shadow">
+                              </div>
+
+                              <div class="col-md-8 col-sm-12">
+                                   <h3>Pick or upload images</h3>
+                                   <p>Users can pick any images from the image library we provided or upload photos from
+                                        their
+                                        album.</p>
+                              </div>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <div class="col-md-4 col-sm-12">
+                                   <img src="../images/p_l_s_e_kf_2.png" class="img-responsive box-shadow">
+                              </div>
+
+                              <div class="col-md-8 col-sm-12">
+                                   <h3>Preview</h3>
+                                   <p>Second, users can put images on an image of real hands to simulate the nail arts.
+                                   </p>
+                              </div>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12">
+                              <div class="col-md-4 col-sm-12">
+                                   <img src="../images/p_l_s_e_kf_3.png" class="img-responsive box-shadow">
+                              </div>
+
+                              <div class="col-md-8 col-sm-12">
+                                   <h3>Link and Print</h3>
+                                   <p>After previewing, users can link the app to our nail-printer via Wi-Fi and print
+                                        images on nails in only a few seconds.</p>
+                              </div>
+                         </div>
+
+                         <div class="col-md-12 col-sm-12 text-center">
                               <strong>User and Audience</strong>
                               <p>The target users are young girls interesting in nail arts and passionating about DIY at
                                    home. These users like innovation products and devices about fashion and beauty that
@@ -121,25 +162,31 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
-                              <strong>Wireframes and Mockups</strong>
+                              <strong>Wireframes</strong>
                          </div>
 
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/p_l_s_e_wrfae.png" class="img-responsive" alt="Portfolio">
                          </div>
 
+                         <div class="col-md-12 col-sm-12 text-center">
+                              <strong>Mockups</strong>
+                         </div>
                          <div class="col-md-12 col-sm-12">
                               <img src="../images/p_l_s_e_mk.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
                               <p>For smoothly experience, I designed a component called Palette to store and show images
-                                   that user chose.</p>
+                                   that user chose. They could quickly store images they liked and put them on the mock
+                                   screen to simulate the nail arts on their fingers. Then send these images to the nail
+                                   printer to have real custom-picture nail art.</p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center">
                               <strong>Logo Design</strong>
-                              <p>I designed a logo font for Polishee - about creative, fashion, revolution beauty. That
+                              <p>I designed a logo font for Polishee - about creative, fashion, revolution and beauty.
+                                   That
                                    was my first time to design about typograhpy and fonts.</p>
                          </div>
 
