fix: logo link + nail wrfm

--- a/project/nail.html
+++ b/project/nail.html
@@ -108,7 +108,7 @@
                               </div>
 
                               <div class="col-md-8 col-sm-12">
-                                   <h3>Pick or upload images</h3>
+                                   <h3>1. Pick or upload images</h3>
                                    <p>Users can pick any images from the image library we provided or upload photos from
                                         their
                                         album.</p>
@@ -121,7 +121,7 @@
                               </div>
 
                               <div class="col-md-8 col-sm-12">
-                                   <h3>Preview</h3>
+                                   <h3>2. Preview</h3>
                                    <p>Second, users can put images on an image of real hands to simulate the nail arts.
                                    </p>
                               </div>
@@ -133,7 +133,7 @@
                               </div>
 
                               <div class="col-md-8 col-sm-12">
-                                   <h3>Link and Print</h3>
+                                   <h3>3. Link and Print</h3>
                                    <p>After previewing, users can link the app to our nail-printer via Wi-Fi and print
                                         images on nails in only a few seconds.</p>
                               </div>
@@ -221,7 +221,7 @@
                <div class="row">
 
                     <div class="col-md-3 col-sm-3">
-                         <img src="../images/wlogo.png">
+                         <a href="../index.html"><img src="../images/wlogo.png"></a>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
