--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -134,7 +134,7 @@
                <div class="row">
 
                     <div class="col-md-3 col-sm-3">
-                         <img src="../images/wlogo.png">
+                         <a href="../index.html"><img src="../images/wlogo.png"></a>
                     </div>
 
                     <div class="col-md-4 col-sm-4">
