--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
             <div class="row">
 
                 <div class="col-md-3 col-sm-3">
-                    <a href="../index.html"><img src="../images/wlogo.png"></a>
+                    <a href="index.html"><img src="images/wlogo.png"></a>
                 </div>
 
                 <div class="col-md-4 col-sm-4">
@@ -145,7 +145,7 @@
 
                 <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
                     <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
-                    <p>© 2019 Weichi Wu | All Rights Reserved.</p>
+                    <p>© 2019 Weichi Wu</p>
                 </div>
 
                 <div class="clearfix col-md-12 col-sm-12">
