--- a/project/qrpa.html
+++ b/project/qrpa.html
@@ -74,11 +74,11 @@
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/q_r_p_a_1.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_lg.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="col-md-6 col-sm-6">
-                              <img src="../images/q_r_p_a_2.png" class="img-responsive" alt="Portfolio">
+                              <img src="../images/q_r_p_a_gif.gif" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="clearfix"></div>
@@ -109,12 +109,8 @@
 
                          </div>
 
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/q_r_p_a_dm.png" class="img-responsive" alt="Portfolio">
-                         </div>
-
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/q_r_p_a_lg.png" class="img-responsive" alt="Portfolio">
+                         <div class="col-md-12 col-sm-12">
+                              <img src="../images/q_r_p_a_dm_big.png" class="img-responsive" alt="Portfolio">
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
@@ -143,7 +139,7 @@
 
                     <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
                          <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
-                         <p>© 2019 Weichi Wu | All Rights Reserved.</p>
+                         <p>© 2019 Weichi Wu</p>
                     </div>
 
                     <div class="clearfix col-md-12 col-sm-12">
