--- a/project/single-project.html
+++ b/project/single-project.html
@@ -130,7 +130,7 @@
 
                     <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
                          <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
-                         <p>© 2019 Weichi Wu | All Rights Reserved.</p>
+                         <p>© 2019 Weichi Wu</p>
                     </div>
 
                     <div class="clearfix col-md-12 col-sm-12">
