--- a/project/nail.html
+++ b/project/nail.html
@@ -205,7 +205,7 @@
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
-                              <a href="#">Next Project <i class="fa fa-long-arrow-right"></i></a>
+                              <a href="qrpa.html">Next Project <i class="fa fa-long-arrow-right"></i></a>
                          </div>
 
                     </div>
@@ -230,7 +230,7 @@
 
                     <div class="col-md-offset-1 col-md-4 col-sm-offset-1 col-sm-3">
                          <p><a href="mailto:hello@weichiwu.com">hello@weichiwu.com</a></p>
-                         <p>© 2019 Weichi Wu | All Rights Reserved.</p>
+                         <p>© 2019 Weichi Wu</p>
                     </div>
 
                     <div class="clearfix col-md-12 col-sm-12">
