--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                                    <img src="images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Mobile App</small>
+                                             <h3>QRental</h3>
+                                             <small>IOT Service of Smart Lock</small>
                                         </div>
                                    </div>
                               </div>
@@ -124,13 +124,13 @@
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                         <a href="project/single-project.html">
+                         <a href="project/su.html">
                               <div class="portfolio-thumb">
-                                   <img src="images/portfolio-img4.jpg" class="img-responsive" alt="Portfolio">
+                                   <img src="images/d_c_.png" class="img-responsive" alt="Portfolio">
                                    <div class="portfolio-overlay">
                                         <div class="portfolio-item">
-                                             <h3>Project Name</h3>
-                                             <small>Logo Design</small>
+                                             <h3>Skill-Up</h3>
+                                             <small>Online Course Platform</small>
                                         </div>
                                    </div>
                               </div>
