--- a/project/nail.html
+++ b/project/nail.html
@@ -200,8 +200,9 @@
 
                          <div class="col-md-12 col-sm-12 text-center">
                               <strong>Outcomes</strong>
-                              <p>The app was well received within our team and client. While it has not yet been
-                                   released, it has already worked with the test nail printer. </p>
+                              <p>The app was well received within our team and client. I'm also an engineer developing
+                                   this project with React Native. While it has not yet been
+                                   released, it has already worked with the test nail printer.</p>
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
