--- a/project/su.html
+++ b/project/su.html
@@ -63,45 +63,41 @@
                <div class="row">
 
                     <div class="col-md-offset-1 col-md-10 col-sm-12">
-                         <h1>Project title here</h1>
-                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                              laboris nisi ut aliquip ex ea commodo consequat.</p>
+                         <h1>Skill-Up</h1>
+                         <p>Skill-Up is an online course platform. Users can read the news, listen to podcasts, watch
+                              videos and take some quiz on it.</p>
 
                          <div class="col-md-12 col-sm-12">
-                              <img src="../images/single-project-img.jpg" class="img-responsive" alt="Portfolio">
+                              <img src="../images/d_c_dm.png" class="img-responsive" alt="Portfolio">
                          </div>
 
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img2.jpg" class="img-responsive" alt="Portfolio">
-                         </div>
-
-                         <div class="col-md-6 col-sm-6">
-                              <img src="../images/portfolio-img3.jpg" class="img-responsive" alt="Portfolio">
-                         </div>
-
-                         <div class="clearfix"></div>
+                         <div class="clearfix" style="clear: both"></div>
 
                          <div class="col-md-6 col-sm-6">
                               <h3>Role</h3>
-                              <p>Brand Identity</p>
+                              <p>Interface Design</p>
+                              <p>Logo Design</p>
+                              <p>App Development</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Length</h3>
-                              <p>2 months</p>
+                              <p>6 months</p>
                          </div>
 
                          <div class="col-md-3 col-sm-3">
                               <h3>Year</h3>
-                              <p>2018</p>
+                              <p>2017-18</p>
                          </div>
 
-                         <div class="col-md-12 col-sm-12 text-center">
-                              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                   incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                   exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                              <strong>James Otto ( Project Manager )..</strong>
+                         <div class="clearfix" style="clear: both"></div>
+
+                         <div class="col-md-6 col-sm-6">
+                              <img src="../images/d_c_.png" class="img-responsive" alt="Portfolio">
+                         </div>
+
+                         <div class="col-md-6 col-sm-6">
+                              <img src="../images/d_c_2.png" class="img-responsive" style="float: right;">
                          </div>
 
                          <div class="col-md-12 col-sm-12 text-center" style="margin-top: 42px">
